tests/fail/expr/continue.rs
fn main() {
    for _ in 0..10 {
        one_assert::assert!(continue);
    }
}
