tests/fail/expr/continue.stderr
error: Expected a boolean expression, found a continue statement
 --> tests/fail/expr/continue.rs:3:29
  |
3 |         one_assert::assert!(continue);
  |                             ^^^^^^^^
